<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/friends" />

        <item
            android:id="@+id/nav_friends_request"
            android:icon="@drawable/request"
            android:title="@string/friends_request" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_launch_black_24dp"
                android:title="@string/log_out_user" />
        </menu>
    </item>

</menu>
